--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "dependencies": {
     "@emotion/styled": "11.10.6",
     "@vitejs/plugin-react-swc": "3.2.0",
+    "emotion": "^11.0.0",
+    "normalize.css": "^8.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.8.1"
