--- a/package.json
+++ b/package.json
@@ -31,10 +31,14 @@
   "dependencies": {
     "@emotion/styled": "11.10.6",
     "@vitejs/plugin-react-swc": "3.2.0",
+    "build": "^0.1.4",
     "emotion": "^11.0.0",
     "normalize.css": "^8.0.1",
+    "npm": "^10.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.8.1"
+    "react-router-dom": "6.8.1",
+    "run": "^1.4.0",
+    "t": "^0.5.1"
   }
 }
