--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "vite build",
@@ -23,10 +24,11 @@
   "devDependencies": {
     "@testing-library/react": "14.0.0",
     "@types/jsdom": "21.1.0",
+    "@types/react": "^18.2.31",
     "jsdom": "21.1.0",
-    "vite": "4.1.4",
+    "vite": "^4.5.0",
     "vite-project-cli": "1.0.0",
-    "vitest": "0.28.5"
+    "vitest": "^0.28.5"
   },
   "dependencies": {
     "@emotion/styled": "11.10.6",
@@ -34,11 +36,9 @@
     "build": "^0.1.4",
     "emotion": "^11.0.0",
     "normalize.css": "^8.0.1",
-    "npm": "^10.2.0",
+    "npm": "^10.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-router-dom": "6.8.1",
-    "run": "^1.4.0",
-    "t": "^0.5.1"
+    "react-router-dom": "6.8.1"
   }
 }
